# my-politics-agents

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  eslint.config.mjs  getting-started.md  location.txt  package-lock.json  package.json  pyproject.toml
.agents/: AGENTS.md  CONVENTIONS.md
.claude/: settings.json
.codex/: config.toml  migrate-to-codex-report.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
adapters/: README.md
data/: README.md
docs/: architecture.md  for-non-developers.md  governance.md  manifest-schema.md  mcp-servers.md  notebooklm-sync.md  ordinance-writing-guide.md  policy-brief-template.md  references-nemotron-personas.md  references-경기도.md  references-성남시.md  references.md  reporting-policy-brief-reference.md  security.md
mcp-servers/: README.md
mcp-servers/gov-archive/: README.md  TODO.md  pyproject.toml
mcp-servers/gov-archive/src/gov_archive/: __main__.py  citation.py  converters.py  paths.py  server.py  tools.py
mcp-servers/gov-archive/tests/: test_smoke.py
notebooks/: README.md  shared-notebooks.json
retrospectives/: .gitkeep  2026-05-04-nemotron-personas.md  2026-05-04-persona-review.md  2026-05-05-bundang-promise-factcheck.md  2026-05-05-bundang-promises-final-matrix-merge.md  2026-05-05-bundang-promises-parallel-factcheck.md  2026-05-05-development-axis-merged.md  2026-05-05-education-axis-merged.md  (+3 more)
scripts/: AGENTS.md  (+18 more)
tools/gov-archive/: README.md  TODO.md  pyproject.toml
tools/gov-archive/src/gov_archive/: __init__.py  converters.py  tools.py
(+200 files in other folders)
