[project]
name = "gov-archive"
version = "0.1.0"
description = "politics-agents — 워크스페이스 로컬 MCP 서버 (archive_fetch / archive_search / archive_cite)"
requires-python = ">=3.12"
license = { text = "CC0-1.0" }
dependencies = [
  "mcp[cli]>=1.27.1",
  "httpx>=0.27",
  "olefile>=0.47",
  "pypdf>=5",
]

[project.scripts]
gov-archive = "gov_archive.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gov_archive"]

[tool.uv]
dev-dependencies = [
  "pytest>=8",
]
